===========
 Changelog
===========

1.0 (unreleased)
================

- Supporting the user defined fields feature of address book.


0.9.1 (2009-09-28)
==================

- Fixing brown bag release: only namespace packages were installed.


0.9 (2009-09-28)
================

- Extracted importer from icemac.addressbook, to make it optional and
  easily extendable.