@@ -1,0 +1,15 @@
+# Copyright (c) 2008-2009 Michael Howitz
+# See also LICENSE.txt
+# $Id$
+"""Database initialisation and upgrading."""
+
+import zope.app.generations.generations
+
+
+GENERATION = 0
+
+
+manager = zope.app.generations.generations.SchemaManager(
+    minimum_generation=GENERATION,
+    generation=GENERATION,
+    package_name='icemac.ab.importer.generations')
