@@ -1,0 +1,9 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           i18n_domain="icemacaddressbook">
+
+  <utility
+    name="icemac.ab.importer"
+    provides="zope.app.generations.interfaces.ISchemaManager"
+    component=".manager" />
+
+</configure>
